# server

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  STATUS.md  app.py  classes.py  config.example.py  core.py  database.sql  endpoints.md  endpoints.txt  entrypoint.sh  generate_proto.bat  main.py  pyproject.toml  requirements-ftp.txt  requirements-s3.txt  requirements.txt  run_all.py  settings.example.py  utils.py
.github/: codecov.yml
.github/workflows/: pytest.yml  pytest_http.yml  todo.yml
client/: discord.html  discord_verify.html  download_assets.py  main.py
docker/: Dockerfile.base  Dockerfile.cdn  Dockerfile.gateway  Dockerfile.http  Dockerfile.pubsub  build-all.sh
migrations/: env.py
migrations/versions/: 3b83b488d232_small_changes.py  5af66bf76735_add_all_models.py  7beb9d8c6121_small_changes.py  a58a63d40123_set_bio_field_as_not_null.py  eb03915355af_create_user_tables.py
other/: README.md  discord.proto  ip_to_lang.pkl
server/: classes.py  config.py  core.py  ctx.py  databases.py  discord_pb2.py  enums.py  errors.py  fixes.py  geoip.py  model.py  msg_client.py  proto.py  pubsub_client.py  responses.py  snowflake.py  storage.py  utils.py
server/cdn/: main.py
server/classes/: channel.py  gifs.py  guild.py  message.py  other.py  user.py
server/discord_converters/: channel.py  guild.py  message.py  user.py
server/gateway/: events.py  gateway.py  main.py
server/http_api/: main.py
server/remote_auth/: gateway.py  main.py
src/: settings.py  settings_test.py
src/cdn/: main.py  models.py
src/gateway/: events.py  gateway.py  main.py  presences.py  utils.py
src/pubsub/: main.py
src/remote_auth/: gateway.py  main.py
src/rest_api/: main.py  utils.py
src/rest_api/models/: applications.py  auth.py  channels.py  guilds.py  hypesquad.py  interactions.py  invites.py  oauth2.py  users.py  users_me.py  webhooks.py
src/rest_api/routes/: applications.py  auth.py  channels.py  gifs.py  guilds.py  hypesquad.py  interactions.py  invites.py  oauth2.py  other.py  teams.py  users.py  users_me.py  webhooks.py
src/voice_gateway/: events.py  gateway.py  main.py
src/yepcord/: config.py  core.py  ctx.py  databases.py  enums.py  errors.py  gateway_dispatcher.py  geoip.py  model.py  mq_broker.py  pubsub_client.py  responses.py  snowflake.py  storage.py  utils.py
src/yepcord/classes/: channel.py  gifs.py  guild.py  message.py  other.py  singleton.py  user.py
src/yepcord/models/: __init__.py  _utils.py  application.py  application_command.py  applications.py  attachment.py  audit_log_entry.py  authorization.py  bot.py  channel.py  channels.py  connected_account.py  db.py  emoji.py  frecency_settings.py  guild.py  guild_ban.py  guild_event.py  guild_member.py  guild_template.py  guilds.py  hidden_dm_channel.py  integration.py  interaction.py  invite.py  message.py  messages.py  mfa_code.py  permission_overwrite.py  reaction.py  readstate.py  relationship.py  remote_auth_session.py  role.py  session.py  sticker.py  thread_member.py  thread_metadata.py  user.py  user_note.py  (+4 more)
ssl/: cert.pem  key.pem
tests/: httpx_mock_callbacks.py  test_core.py  test_http.py  test_storage_cdn.py  utils.py  yep_image.py
tests/api/: test_application_commands.py  test_applications.py  test_auth.py  test_captcha.py  test_connections.py  test_dm_channel.py  test_emoji_and_stickers.py  test_guild.py  test_guild_channel.py  test_interactions.py  test_invite.py  test_message.py  test_mfa.py  test_oauth2.py  test_other.py  test_relationships.py  test_remote_auth.py  test_role.py  test_scheduled_events.py  test_slash_commands.py  test_threads.py  test_user_message_commands.py  test_user_profile.py  test_user_settings.py  test_webhooks.py  utils.py
tests/cdn/: ftp_server.py  local_server.py  s3_server.py  test_storage_and_cdn.py
yepcord/: asgi.py  cli.py
yepcord/cdn/: main.py  models.py
yepcord/gateway/: compression.py  events.py  gateway.py  main.py  presences.py  utils.py
yepcord/remote_auth/: gateway.py  main.py
yepcord/rest_api/: dependencies.py  main.py  utils.py  y_blueprint.py
yepcord/rest_api/models/: applications.py  auth.py  channels.py  connections.py  guilds.py  hypesquad.py  interactions.py  invites.py  oauth2.py  users.py  users_me.py  webhooks.py
yepcord/rest_api/routes/: applications.py  auth.py  channels.py  connections.py  gifs.py  guilds.py  hypesquad.py  interactions.py  invites.py  oauth2.py  other.py  teams.py  users.py  users_me.py  webhooks.py
yepcord/voice_gateway/: default_sdp.py  events.py  gateway.py  go_rpc.py  main.py  schemas.py  utils.py
yepcord/yepcord/: config.py  core.py  ctx.py  enums.py  errors.py  gateway_dispatcher.py  mq_broker.py  proto.py  proto.pyi  snowflake.py  storage.py  utils.py
yepcord/yepcord/classes/: captcha.py  connections.py  fakeredis.py  gifs.py  other.py  singleton.py
yepcord/yepcord/models/: __init__.py  _utils.py  application.py  application_command.py  attachment.py  audit_log_entry.py  authorization.py  bot.py  channel.py  connected_account.py  emoji.py  frecency_settings.py  guild.py  guild_ban.py  guild_event.py  guild_member.py  guild_template.py  hidden_dm_channel.py  integration.py  interaction.py  invite.py  message.py  mfa_code.py  permission_overwrite.py  poll.py  poll_answer.py  poll_vote.py  presence.py  reaction.py  readstate.py  relationship.py  remote_auth_session.py  role.py  session.py  sticker.py  thread_member.py  thread_metadata.py  user.py  user_note.py  user_settings.py  (+3 more)
yepcord/yepcord/utils/: __init__.py  bit_flags.py  captcha.py  email_msg.py  geoip.py  gifs.py  jwt.py  mfa.py  singleton.py
