[tool.poetry]
name = "yepcord-server"
version = "1.0.0b4"
description = "YEPCord - Free open source selfhostable fully discord-compatible chat"
authors = ["RuslanUC <dev_ruslan_uc@protonmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "yepcord"}]
repository = "https://github.com/yepcord/server"
homepage = "https://github.com/yepcord/server"
keywords = ["yepcord", "chat", "discord", "chat-server", "chat-backend", "discord-backend"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Framework :: Flask",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Framework :: Pytest",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
    "Typing :: Typed",
]

[tool.poetry.scripts]
yepcord = "yepcord.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
quart = "0.19.5"
aiofiles = "23.2.1"
websockets = "12.0"
uvicorn = "0.29.0"
aiohttp = "3.9.5"
python-magic = "0.4.27"
pillow = "10.3.0"
protobuf = "4.25.3"
python-dateutil = "2.9.0.post0"
cryptography = "42.0.7"
emoji = "2.11.1"
six = "1.16.0"
bcrypt = "4.1.3"
quart-schema = "0.19.1"
pydantic = "2.7.1"
werkzeug = "3.0.3"
aioftp = "0.22.3"
orjson = "3.10.3"
mailers = {version = "3.0.5", extras = ["smtp"]}
redis = ">=4.6.0"
click = "8.1.7"
maxminddb = "2.6.1"
wget = "3.2"
tortoise-orm = {extras = ["aiosqlite", "asyncmy", "accel"], version = "0.20.0"}
uvloop = "0.19.0"
async-timeout = "^4.0.3"
aerich = "^0.7.2"
yc-protobuf3-to-dict = "^0.3.0"
s3lite = "^0.1.4"
fast-depends = ">=2.4.2"
faststream = {extras = ["kafka", "nats", "rabbit", "redis"], version = "^0.5.4"}
zstandard = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.6"
pyftpdlib = "1.5.8"
fake-s3 = "1.0.2"
types-protobuf = "^4.24.0.4"
pytest-httpx = "^0.30.0"
tuna = "^0.5.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
